--- a/index.html
+++ b/index.html
@@ -213,6 +213,26 @@
       </div>
     </div>
 
+    <div class="card" data-tab="bleh">
+      <div class="headline">Back in my day Netflix and Chill was called a Drive-In</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By GREY HAIRED PEOPLE</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="Plungers">
+      <div class="headline">We need to be more appreciated</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Plungers everywhere</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
